--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h2>A cryptocurrency trading platform made easy.</h2>
     <p>Powered by Coinbase.</p>
     <div id="output"></div>
+    <!-- <div class="web-view-example">
+      <webview id="foo" src="https://www.github.com/" style="display:inline-flex; width:640px; height:480px"></webview>
+    </div> -->
   </body>
   <script>
     let output = `
