setup main and renderer process interaction

--- a/feed.html
+++ b/feed.html
@@ -7,13 +7,15 @@
     <title>CryptoTrade</title>
   </head>
   <body>
-    <div class="test">
+    <h1>Feed Page</h1>
+    <h2>Succesfully Logged In</h2>
+    <!-- <div class="test">
       <form action="index.html">
         <input type="submit" value="Main Page">
       </form>
-    </div>
+    </div> -->
   </body>
   <script>
-    //Use renderer.js or another script for renderer process
+    require('./scripts/feed.js');
   </script>
 </html>
