fixed api calls

--- a/feed.html
+++ b/feed.html
@@ -9,6 +9,12 @@
   <body>
     <h1>Feed Page</h1>
     <h2>Succesfully Logged In</h2>
+    <div class="image-div">
+      <!-- <img src="" alt=""> -->
+    </div>
+    <div class="user-name">
+      
+    </div>
     <!-- <div class="test">
       <form action="index.html">
         <input type="submit" value="Main Page">
@@ -17,5 +23,6 @@
   </body>
   <script>
     require('./scripts/feed.js');
+    //add require 'Keys.js' class here so feed.js has access
   </script>
 </html>
