changed api key locations

--- a/feed.html
+++ b/feed.html
@@ -13,7 +13,7 @@
       <!-- <img src="" alt=""> -->
     </div>
     <div class="user-name">
-      
+
     </div>
     <!-- <div class="test">
       <form action="index.html">
@@ -21,8 +21,8 @@
       </form>
     </div> -->
   </body>
+  <script src="scripts/keys.js"></script>
   <script>
     require('./scripts/feed.js');
-    //add require 'Keys.js' class here so feed.js has access
   </script>
 </html>
