--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     document.getElementById('output').innerHTML = output;
   </script>
 
+  <script src="scripts/keys.js"></script>
   <script>
     require('./renderer.js');
   </script>
