added login button on main menu

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
     <h1>CryptoTrade</h1>
     <h2>A cryptocurrency trading platform made easy.</h2>
     <p>Powered by Coinbase.</p>
-    <div id="output"></div>
+    <div>
+      <button class="login-coinbase" type="button" name="button">Log in with Coinbase</button>
+    </div>
+    <!-- <div id="output"></div> -->
   </body>
 
   <!--SCRIPTS---------->
-  <script>
+  <!-- <script>
     let output = `
     <ul class="list-group">
       <li class="list-group-item">Node: ${process.versions.node}</li>
     </ul>
     `;
     document.getElementById('output').innerHTML = output;
-  </script>
+  </script> -->
 
   <script src="scripts/keys.js"></script>
   <script>
