--- a/feed.html
+++ b/feed.html
@@ -4,23 +4,39 @@
     <meta charset="utf-8">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap_darkly.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>CryptoTrade</title>
   </head>
   <body>
-    <h1>Feed Page</h1>
-    <h2>Succesfully Logged In</h2>
-    <div class="image-div">
-      <!-- <img src="" alt=""> -->
-    </div>
-    <div class="user-name">
+    <div class="container-fullwidth">
 
+      <!--NAVBAR---------->
+      <nav class="navbar navbar-default navbar-expand-sm">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="trade.html">Trade</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right" id="navbar-user-icon">
+            <!-- <img src="" alt=""> -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right" id="navbar-user-name">
+            <!-- <li><a href="#">Link</a></li> -->
+          </ul>
+        </div>
+      </nav>
+
+      <!--CONTENT--------->
+      <div class="row">
+        <div class="col">
+          <h1>Feed Page</h1>
+        </div>
+      </div>
+      
     </div>
-    <!-- <div class="test">
-      <form action="index.html">
-        <input type="submit" value="Main Page">
-      </form>
-    </div> -->
   </body>
+
+  <!--SCRIPTS------------->
   <script src="scripts/keys.js"></script>
   <script>
     require('./scripts/feed.js');
