--- a/trade.html
+++ b/trade.html
@@ -4,13 +4,39 @@
     <meta charset="utf-8">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap_darkly.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>CryptoTrade</title>
   </head>
   <body>
-    <div class="test">
-      <form action="index.html">
-        <input type="submit" value="Main Page">
-      </form>
+    <div class="container-fullwidth">
+
+      <!--NAVBAR---------->
+      <nav class="navbar navbar-default navbar-expand-sm">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="feed.html">Feed</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right" id="navbar-user-icon">
+            <!-- <img src="" alt=""> -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right" id="navbar-user-name">
+            <!-- <li><a href="#">Link</a></li> -->
+          </ul>
+        </div>
+      </nav>
     </div>
+    <div class="row">
+      <div class="col">
+        <h1>Trade Page</h1>
+      </div>
+    </div>
+
   </body>
+
+  <!--SCRIPTS------------->
+  <script src="scripts/keys.js"></script>
+  <script>
+    require('./scripts/trade.js');
+  </script>
 </html>
