--- a/trade.html
+++ b/trade.html
@@ -14,7 +14,7 @@
       <!--NAVBAR---------->
       <nav class="navbar navbar-default navbar-expand-sm">
         <div class="navbar-header">
-          <a class="navbar-brand" href="feed.html">Feed</a>
+          <a class="navbar-brand" href="feed.html">Dashboard</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right" id="navbar-user-icon">
