--- a/profile.html
+++ b/profile.html
@@ -13,10 +13,13 @@
 
       <!--NAVBAR---------->
       <nav class="navbar navbar-default navbar-expand-sm">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="feed.html">Feed</a>
-        </div>
         <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="feed.html">Dashboard</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li><a href="trade.html">Trade</a></li>
+          </ul>
           <ul class="nav navbar-nav navbar-right" id="navbar-user-icon">
             <!-- <img src="" alt=""> -->
           </ul>
