added to profile page

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     <div class="container-fullwidth">
 
       <!--NAVBAR---------->
-      <nav class="navbar navbar-default navbar-expand-sm">
+      <nav class="navbar navbar-default navbar-expand-md">
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="feed.html">Dashboard</a></li>
@@ -28,13 +28,70 @@
           </ul>
         </div>
       </nav>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h1>Profile Page</h1>
-      </div>
-    </div>
 
+      <!--PROFILE HEADING---------->
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+          <div id="profile-page-heading" class="row">
+            <div class="col">
+              <img id="profile-picture" src="#" alt="profile picture">
+              <h1 id="profile-name-heading"></h1>
+            </div>
+          </div>
+
+          <!--TRADE HISTORY-------->
+          <div id="trade-history-div" class="row">
+            <h3 id="cryptotrade-history-header">CryptoTrade History</h3>
+            <table class="table table-striped table-hover ">
+              <thead>
+                <tr>
+                  <th>Date</th>
+                  <th>Bought/Sold</th>
+                  <th>Price</th>
+                  <th>Success</th>
+                </tr>
+              </thread>
+              <tbody>
+                <tr class="success">
+                  <td>1</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr class="success">
+                  <td>2</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr class="info">
+                  <td>1</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr class="info">
+                  <td>2</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr class="success">
+                  <td>2</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+        </div>
+        <div class="col-sm-1"></div>
+      </div>
+
+    </div>
   </body>
 
   <!--SCRIPTS------------->
