added price checking

--- a/feed.html
+++ b/feed.html
@@ -27,12 +27,23 @@
       </nav>
 
       <!--CONTENT--------->
-      <div class="row">
+      <div id="feed-price-heading" class="row">
+        <div class="col-sm-1"></div>
         <div class="col">
-          <h1>Feed Page</h1>
+          <h2>Bitcoin</h2>
+          <p id="feed-price-btc"></p>
         </div>
+        <div class="col">
+          <h2>Ethereum</h2>
+          <p id="feed-price-eth"></p>
+        </div>
+        <div class="col">
+          <h2>Litecoin</h2>
+          <p id="feed-price-ltc"></p>
+        </div>
+        <div class="col-sm-1"></div>
       </div>
-      
+
     </div>
   </body>
 
