--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col" id="main-menu-description">
           <h2>A cryptocurrency trading platform made easy.</h2>
-          <p>Powered by Coinbase</p>
+          <p>~ Powered by Coinbase ~</p>
         </div>
       </div>
       <div class="row">
