--- a/profile.html
+++ b/profile.html
@@ -48,36 +48,66 @@
                 <tr>
                   <th>Date</th>
                   <th>Bought/Sold</th>
+                  <th>Currency</th>
                   <th>Price</th>
-                  <th>Success</th>
                 </tr>
               </thread>
               <tbody>
-                <tr class="success">
+                <tr>
                   <td>1</td>
                   <td>Column content</td>
                   <td>Column content</td>
                   <td>Column content</td>
                 </tr>
-                <tr class="success">
+                <tr>
                   <td>2</td>
                   <td>Column content</td>
                   <td>Column content</td>
                   <td>Column content</td>
                 </tr>
-                <tr class="info">
+                <tr>
                   <td>1</td>
                   <td>Column content</td>
                   <td>Column content</td>
                   <td>Column content</td>
                 </tr>
-                <tr class="info">
+                <tr>
                   <td>2</td>
                   <td>Column content</td>
                   <td>Column content</td>
                   <td>Column content</td>
                 </tr>
-                <tr class="success">
+                <tr>
+                  <td>2</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                  <td>Column content</td>
+                </tr>
+                <tr>
                   <td>2</td>
                   <td>Column content</td>
                   <td>Column content</td>
