--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
                   <th>Date</th>
                   <th>Bought/Sold</th>
                   <th>Currency</th>
-                  <th>Price</th>
+                  <th>Amount</th>
                 </tr>
               </thread>
               <tbody id="transaction-history-entry">
