--- a/feed.html
+++ b/feed.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap_darkly.css">
     <link rel="stylesheet" href="css/main.css">
     <title>CryptoTrade</title>
@@ -18,27 +20,119 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right" id="navbar-user-icon">
-            <!-- <img src="" alt=""> -->
           </ul>
           <ul class="nav navbar-nav navbar-right" id="navbar-user-name">
-            <!-- <li><a href="#">Link</a></li> -->
           </ul>
         </div>
       </nav>
+
+      <!--MODAL WATCH LIST------>
+      <!-- Modal-Bitcoin -->
+      <div id="bitcoin-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <div class="col">
+                <h4 class="modal-title">Add Bitcoin to watchlist</h4>
+              </div>
+              <div class="col-sm-5"></div>
+              <div class="col">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>Select a price to be notified when Bitcoin reaches this point.</p>
+            </div>
+            <div class="modal-footer">
+              <div class="input-group">
+                <span class="input-group-addon">$</span>
+                <input type="number" min="1.00" step="0.01" max="2500" class="form-control">
+                <span class="input-group-btn">
+                  <button id="bitcoin-watchlist" class="btn btn-primary" type="button" data-dismiss="modal">Set</button>
+                </span>
+              </div>
+              <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--Modal Ether-->
+      <div id="ether-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <div class="col">
+                <h4 class="modal-title">Add Ether to watchlist</h4>
+              </div>
+              <div class="col-sm-5"></div>
+              <div class="col">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>Select a price to be notified when Ether reaches this point.</p>
+            </div>
+            <div class="modal-footer">
+              <div class="input-group">
+                <span class="input-group-addon">$</span>
+                <input type="number" min="1.00" step="0.01" max="2500" class="form-control">
+                <span class="input-group-btn">
+                  <button id="ether-watchlist" class="btn btn-primary" type="button" data-dismiss="modal">Set</button>
+                </span>
+              </div>
+              <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--Modal Litcoin-->
+      <div id="litecoin-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <div class="col">
+                <h4 class="modal-title">Add Litecoin to watchlist</h4>
+              </div>
+              <div class="col-sm-5"></div>
+              <div class="col">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>Select a price to be notified when Litecoin reaches this point.</p>
+            </div>
+            <div class="modal-footer">
+              <div class="input-group">
+                <span class="input-group-addon">$</span>
+                <input type="number" min="1.00" step="0.01" max="2500" class="form-control">
+                <span class="input-group-btn">
+                  <button id="litecoin-watchlist" class="btn btn-primary" type="button" data-dismiss="modal">Set</button>
+                </span>
+              </div>
+              <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!--CONTENT--------->
       <div id="feed-price-heading" class="row">
         <div class="col-sm-1"></div>
         <div class="col">
-          <h2>Bitcoin</h2>
+          <h2 data-toggle="modal" data-target="#bitcoin-modal">Bitcoin</h2>
           <p id="feed-price-btc"></p>
         </div>
         <div class="col">
-          <h2>Ethereum</h2>
+          <h2 data-toggle="modal" data-target="#ether-modal">Ether</h2>
           <p id="feed-price-eth"></p>
         </div>
         <div class="col">
-          <h2>Litecoin</h2>
+          <h2 data-toggle="modal" data-target="#litecoin-modal">Litecoin</h2>
           <p id="feed-price-ltc"></p>
         </div>
         <div class="col-sm-1"></div>
