--- a/feed.html
+++ b/feed.html
@@ -47,7 +47,7 @@
             <div class="modal-footer">
               <div class="input-group">
                 <span class="input-group-addon">$</span>
-                <input type="number" min="1.00" step="0.01" max="2500" class="form-control">
+                <input type="number" min="1.00" step="0.01" max="2500" class="form-control watchlist-price">
                 <span class="input-group-btn">
                   <button id="bitcoin-watchlist" class="btn btn-primary" type="button" data-dismiss="modal">Set</button>
                 </span>
